--- a/templates/admin/bl_search.html
+++ b/templates/admin/bl_search.html
@@ -56,7 +56,7 @@
                             
                             <div class="modal-footer">
                                 <div class="pull-right">
-                                    <button type="submit" name='btn' value="Upload" data-dismiss="modal" class="btn btn-success btn-lg" />Ok</button>
+                                    <button type="submit" name='btn' value="Upload" data-dismiss="modal" class="btn btn-success btn-lg" >Ok</button>
                                 </div>
                             </div>
                         </div>
