Task presenter page layout fixes

--- a/templates/applications/presenters/basic.html
+++ b/templates/applications/presenters/basic.html
@@ -1,5 +1,6 @@
-<div class="well">
-  <h2><i class="glyphicon glyphicon-edit"></i> Basic</h2> 
-  <h3>This is the most basic template</h3>
-  <a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='basic')}}" class="btn btn-danger btn-dash">Use</a>
-</div>
+<a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='basic')}}">
+  <div class="well">
+    <h2><i class="glyphicon glyphicon-edit"></i> Basic</h2> 
+    <h3>This is the most basic template</h3>
+  </div>
+</a>
