--- a/templates/applications/presenters/image.html
+++ b/templates/applications/presenters/image.html
@@ -1,5 +1,6 @@
-<div class="well">
-  <h2><i class="glyphicon glyphicon-picture"></i> Image</h2> 
-  <h3>Re-use the image pattern recognition template</h3>
-  <a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='image')}}" class="btn btn-danger btn-dash">Use</a>
-</div>
+<a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='image')}}"></a>
+  <div class="well">
+    <h2><i class="glyphicon glyphicon-picture"></i> Image</h2> 
+    <h3>Re-use the image pattern recognition template</h3>
+  </div>
+</a>
