--- a/templates/applications/presenters/map.html
+++ b/templates/applications/presenters/map.html
@@ -1,5 +1,6 @@
+<a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='map')}}">
 <div class="well">
   <h3><i class="glyphicon glyphicon-globe"></i>Georeferencing</h3> 
-  <p>Re-use the georeferencing template</p>
-  <a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='map')}}" class="btn btn-danger btn-dash">Use</a>
+  <h3>Re-use the georeferencing template</h3>
 </div>
+</a>
