--- a/templates/applications/presenters/pdf.html
+++ b/templates/applications/presenters/pdf.html
@@ -1,5 +1,6 @@
-<div class="well">
-  <h2><i class="glyphicon glyphicon-pencil"></i>Transcription</h2> 
-  <h3>Re-use the document transcription template</h3>
-  <a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='pdf')}}" class="btn btn-danger btn-dash">Use</a>
-</div>
+<a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='pdf')}}" >
+  <div class="well">
+    <h2><i class="glyphicon glyphicon-pencil"></i>Transcription</h2> 
+    <h3>Re-use the document transcription template</h3>
+  </div>
+</a>
