--- a/templates/applications/presenters/video.html
+++ b/templates/applications/presenters/video.html
@@ -1,5 +1,6 @@
+<a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='video')}}">
 <div class="well">
   <h2><i class="glyphicon glyphicon-film"></i> Video</h2> 
-  <p>Re-use the video pattern recognition template</p>
-  <a href="{{url_for('app.task_presenter_editor', short_name=app.short_name, template='video')}}" class="btn btn-danger btn-dash">Use</a>
+  <h3>Re-use the video pattern recognition template</h3>
 </div>
+</a>
