Projects can now be sorted

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -36,6 +36,7 @@ textarea{resize:none}
 .padding-top-sm{padding-top:40px}
 .padding-top-xs{padding-top:20px}
 .margin-top-xs{margin-top:10px}
+.margin-top-sm{margin-top:30px}
 .margin-right-xs{margin-right:10px}
 .margin-bottom-xs{margin-bottom:10px}
 .padding-bottom{padding-bottom:50px}
