--- a/templates/applications/index.html
+++ b/templates/applications/index.html
@@ -27,7 +27,7 @@
                     <div class="col-xs-12 padding-top-xs">
                         {% include "_flash_messages.html" %}
                         <div id="sorts" class="btn-group pull-right">
-                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-sort-value="original-order">Sort by <span id="order">name</span> <span class="caret"></span></button>
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-sort-value="original-order">Sort by <span id="order">Name</span> <span class="caret"></span></button>
                             <ul class="dropdown-menu" style="top:35px;">
                               <li><a href="#" data-sort-value="original-order">name</a></li>
                               <li><a href="#" data-sort-value="date">date</a></li>
@@ -35,12 +35,9 @@
                               <li><a href="#" data-sort-value="progress">progress</a></li>
                             </ul>
                         </div>
-                    </div>
-                </div>
-            
-                <section>
+                
                     {% if apps %}
-                        <ul class="polaroids">
+                        <ul class="polaroids projects margin-top-sm">
                             {% for app in apps %}
                                 {{ helper.show_app(app, active_cat.short_name, current_user, upload_method) }}
                             {% endfor %}
@@ -53,7 +50,8 @@
                                 <h2 class="text-center inset-text-grey">{{_('Sorry, there are no published projects for this category yet')}}</h2>
                             </div>
                         {% endif %}
-                    </section>
+                    </div>
+                </div>
             
 </div>
 {{ helper.broken_image() }}
