--- a/templates/applications/new.html
+++ b/templates/applications/new.html
@@ -25,7 +25,7 @@
                         · Explain how the project works and how volunteers can help.
                         · Highlight the reasons why volunteers contributions are essential.
                         
-                        You can use HTML tags to format your description.'), class="form-control", required="required") }}
+                        You can use Markdown to format your description.'), class="form-control", required="required") }}
                         <div class="pull-right" role="group">
                             <a href="{{url_for('account.profile', name=current_user.name)}}" class="btn btn-default">{{_('Cancel')}}</a>
                             <input type="submit" value="Create" class="btn btn-success" />
