--- a/templates/applications/snippets/options.html
+++ b/templates/applications/snippets/options.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-md-12">
         <h1><strong>{{app.name}}</strong>: Task Presenter Editor</h1>
-        <p class="lead">{{_('Use one of the following available')}}
-        <strong>{{_('templates')}}</strong> {{_('for your project')}}
+        <p class="lead">First select one of the following 
+        <strong>{{_('templates')}}</strong> {{_('as a basis for your project')}}
     </div>
 </div>
 {% for column in presenters|batch(2)%}
