--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -5,7 +5,7 @@
 {% include "_flash_messages_floating.html" %}
 <div class="splash">
   <div class="splash-overlay vcenter hcenter">
-    <div class="container text-center padding-top">
+    <div class="container text-center ie-vcenter padding-top">
       <h1>Crowd-sourcing from the British Library</h1>
         <div class="col-sm-12">
             <div data-anchor="#intro" class="btn btn-circle anchor-btn">
