--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <!-- Le styles -->
     <link href="{{url_for('static', filename='vendor/bootstrap.min.css')}}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css">
-    <link href="{{url_for('static', filename='css/styles.css')}}?v=2.1.4" rel="stylesheet">
+    <link href="{{url_for('static', filename='css/styles.css')}}?v=2.1.5" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 
@@ -23,6 +23,9 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
       <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+      <style>
+        .ie-vcenter{top:25%;position:relative}
+      </style>
     <![endif]-->
 
     <!-- Le fav and touch icons -->
