--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,10 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
       <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-      <style>
-        .ie-vcenter{top:25%;position:relative}
-      </style>
+      <style>.ie-vcenter{top:25%;position:relative}</style>
+    <![endif]-->
+    <!--[if IE 9]>
+      <style>.ie-vcenter{top:25%;position:relative}</style>
     <![endif]-->
 
     <!-- Le fav and touch icons -->
