Placeholders for older browsers hide on input

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-placeholder-focus="false">
   <head>
     <meta charset="utf-8">
     {% if brand == title %}
