--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -132,6 +132,7 @@ body > footer .container{padding-top:20px;padding-bottom:20px}
 .banner .featured li a:hover{position:absolute;margin:-2px 0 0 -2px;-webkit-box-shadow:0 0 3px 0 rgba(0,0,0,0.8);box-shadow:0 0 3px 0 rgba(0,0,0,0.8);background-color:#FFF;width:112px;z-index:2}
 .banner .featured li a:hover img{border:solid 6px #FFF;-webkit-box-shadow:inset 0 0 2px 0 rgba(0,0,0,0.5);box-shadow:inset 0 0 2px 0 rgba(0,0,0,0.5);width:100px}
 .banner .featured li img{min-width:100px;min-height:100px}
+.image_container{margin-top:0px;}
 ul.users{margin:0 auto;display:table;}
 ul.users li{display:inline-block;margin:25px 0 0px 3px;float:none;}
 ul.users li a{display:block;margin-bottom:5px;margin-right:10px;margin-left:10px}
@@ -262,14 +263,14 @@ pre.prettyprint{text-align:left}
 ul.polaroids a.polaroid:after{content:attr(data-polaroid-title)}
 ul.polaroids a.polaroid{list-style:none;text-overflow:ellipsis;overflow:hidden;background:#fff;display:inline;float:left;margin:0 0 27px 30px;width:140px;padding:10px 7px 11px;text-align:center;font-family:'Permanent Marker',cursive;text-decoration:none;color:#333;font-size:14px;-webkit-box-shadow:0 3px 6px rgba(0,0,0,.25);-moz-box-shadow:0 3px 6px rgba(0,0,0,.25);box-shadow:0 3px 6px rgba(0,0,0,.25);-webkit-transition:-webkit-transform .15s linear;-moz-transition:-moz-transform .15s linear;-ms-transition:-ms-transform .15s linear;-o-transition:-o-transform .15s linear;transition:transform .15s linear;-moz-transform:rotate(-2deg);-webkit-transform:rotate(-2deg);-ms-transform:rotate(-2deg);-o-transform:rotate(-2deg);transform:rotate(-2deg)}
 ul.polaroids a.polaroid.polaroid-sm{width:120px}
-ul.polaroids .polaroid-sm img{height:100px}
+ul.polaroids .polaroid-sm img{width:100px;height:100px}
 ul.polaroids a.polaroid:hover{-webkit-transform:scale(1.25);-moz-transform:scale(1.25);position:relative;z-index:5}
-ul.polaroids li:nth-child(even) a{-webkit-transform:rotate(2deg);-moz-transform:rotate(2deg)}
+ul.polaroids li:nth-child(even) a{-webkit-transform:rotate(2deg);-moz-transform:rotate(2deg);-ms-transform:rotate(-2deg);-o-transform:rotate(-2deg);transform:rotate(-2deg)}
 ul.polaroids .polaroid li:nth-child(3n) a{-webkit-transform:none;-moz-transform:none;position:relative;top:-5px}
-ul.polaroids .polaroid li:nth-child(5n) a{-webkit-transform:rotate(5deg);-moz-transform:rotate(5deg);position:relative;right:5px}
+ul.polaroids .polaroid li:nth-child(5n) a{-webkit-transform:rotate(5deg);-moz-transform:rotate(5deg);-ms-transform:rotate(-2deg);-o-transform:rotate(-2deg);transform:rotate(-2deg);position:relative;right:5px}
 ul.polaroids .polaroid li:nth-child(8n) a{position:relative;top:8px;right:5px}
 ul.polaroids .polaroid li:nth-child(11n) a{position:relative;top:3px;left:-5px}
-ul.polaroids .polaroid img{max-width:120px;max-height:120px;margin-bottom:10px;border:1px solid #DDD}
+ul.polaroids .polaroid img{width:120px;max-width:120px;max-height:120px;margin-bottom:10px;border:1px solid #DDD}
 img.grey-border{border:1px solid #DDD}
 .img-circle .jcrop-holder div{-webkit-border-radius:50%!important;-moz-border-radius:50%!important;border-radius:50%!important}
 .jcrop-keymgr{display:none!important}
@@ -323,6 +324,7 @@ record{border-bottom:1px solid #EFEFEF;display:block;padding: 20px 0px}
 #search_results{border-top: 1px solid #EFEFEF;margin-top:10px}
 .glyphicon.spinning{animation:spin 1s infinite linear;-webkit-animation:spin2 1s infinite linear}
 .control-label{text-overflow:ellipsis;overflow-x:auto;}
+.placeholderjs{color:#666;}
 @keyframes spin {
 from{transform:scale(1) rotate(0deg)}
 to{transform:scale(1) rotate(360deg)}
