--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <!-- Le styles -->
     <link href="{{url_for('static', filename='vendor/bootstrap.min.css')}}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css">
-    <link href="{{url_for('static', filename='css/styles.css')}}?v=2.1.6" rel="stylesheet">
+    <link href="{{url_for('static', filename='css/styles.css')}}?v=2.1.7" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 
@@ -26,7 +26,10 @@
       <style>.ie-vcenter{top:25%;position:relative}</style>
     <![endif]-->
     <!--[if IE 9]>
-      <style>.ie-vcenter{top:25%;position:relative}</style>
+      <style>
+      .ie-vcenter{top:25%;position:relative}
+      #image_container{margin-top:0px!important;}
+      </style>
     <![endif]-->
 
     <!-- Le fav and touch icons -->
