More minor style fixes

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -264,11 +264,11 @@ ul.polaroids a.polaroid{list-style:none;text-overflow:ellipsis;overflow:hidden;b
 ul.polaroids a.polaroid.polaroid-sm{width:120px}
 ul.polaroids .polaroid-sm img{width:100px!important;height:100px}
 ul.polaroids a.polaroid:hover{-webkit-transform:scale(1.25);-moz-transform:scale(1.25);position:relative;z-index:5}
-ul.polaroids li:nth-child(even) a,ul.polaroids li.even a{-webkit-transform:rotate(2deg);-moz-transform:rotate(2deg);-ms-transform:rotate(2deg);-o-transform:rotate(2deg);transform:rotate(2deg)}
-ul.polaroids .polaroid li:nth-child(3n) a{-webkit-transform:none;-moz-transform:none;-ms-transform:none;position:relative;top:-5px}
-ul.polaroids .polaroid li:nth-child(5n) a{-webkit-transform:rotate(5deg);-moz-transform:rotate(5deg);-ms-transform:rotate(5deg);-o-transform:rotate(5deg);transform:rotate(5deg);position:relative;right:5px}
-ul.polaroids .polaroid li:nth-child(8n) a{position:relative;top:8px;right:5px}
-ul.polaroids .polaroid li:nth-child(11n) a{position:relative;top:3px;left:-5px}
+ul.polaroids li:nth-child(even) a,ul.polaroids div:nth-child(even) li a,ul.polaroids li.even a{-webkit-transform:rotate(2deg);-moz-transform:rotate(2deg);-ms-transform:rotate(2deg);-o-transform:rotate(2deg);transform:rotate(2deg)}
+ul.polaroids .polaroid li:nth-child(3n) a,ul.polaroids .polaroid div:nth-child(3n) li a{-webkit-transform:none;-moz-transform:none;-ms-transform:none;position:relative;top:-5px}
+ul.polaroids .polaroid li:nth-child(5n) a,ul.polaroids .polaroid div:nth-child(5n) li a{-webkit-transform:rotate(5deg);-moz-transform:rotate(5deg);-ms-transform:rotate(5deg);-o-transform:rotate(5deg);transform:rotate(5deg);position:relative;right:5px}
+ul.polaroids .polaroid li:nth-child(8n) a,ul.polaroids .polaroid div:nth-child(8n) li a{position:relative;top:8px;right:5px}
+ul.polaroids .polaroid li:nth-child(11n) a,ul.polaroids .polaroid div:nth-child(11n) li a{position:relative;top:3px;left:-5px}
 ul.polaroids .polaroid img{width:120px;max-width:120px;max-height:120px;margin-bottom:10px;border:1px solid #DDD}
 img.grey-border{border:1px solid #DDD}
 .img-circle .jcrop-holder div{-webkit-border-radius:50%!important;-moz-border-radius:50%!important;border-radius:50%!important}
