--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -5,7 +5,7 @@
 {% import "applications/_helpers.html" as app_helper %}
 
 {% block content %}
-
+<span class="set-main-bg" data-bg="pattern-white-wall"></span>
 <div class="container-padded  remove-padding-bottom">
     <section class="pattern-brushed box-shadow-grey">
         <div class="container padding-top">
@@ -14,27 +14,15 @@
         </div>
     </section>
     
-    <section  class="white pattern-white-wall inset-shadow-top">
-        <div class="container container-padded">
-            <div class="padding-top-sm text-center">
-                <h2>{{ _('Your Contributions') }}</h2>
             {% if apps_contrib %}
-                <ul class="polaroids">
-                    {% for app in apps_contrib %}
-                        {{ app_helper.show_app(app, "featured", current_user, upload_method) }}
-                    {% endfor %}
-                </ul>
+                <section id="contributed-apps" class="white pattern-white-wall inset-shadow-top">
+                    {{render_grid_apps(apps_contrib, "Your Contributions", upload_method)}}
+                </section>
             {% else %}
             
                     
                 <small>No contributions yet</small>
             {% endif %}
-            
-                
-                
-            </div>
-        </div>
-    </section>
         {{ app_helper.broken_image() }}
     
     
