--- a/templates/account/public_profile.html
+++ b/templates/account/public_profile.html
@@ -5,7 +5,7 @@
 {% import "privacy/locked.html" as privacy %}
 
 {% block content %}
-
+<span class="set-main-bg" data-bg="pattern-white-wall"></span>
 <div class="container-padded remove-padding-bottom">
     <section class="mid-grey pattern-brushed box-shadow-grey-bottom padding-bottom">
         <div class="container padding-top">
