--- a/templates/applications/app.html
+++ b/templates/applications/app.html
@@ -7,7 +7,7 @@
 
 {{ render_local_nav(current_user, "info", app.short_name) }}
     {% if app %}
-    <div class="container-padded  remove-padding-bottom">
+    <div class="container-padded  remove-padding-bottom hidden-container" style="display:none;">
         <section class="white">
             <div class="container container-padded">
             
