--- a/templates/applications/new_blogpost.html
+++ b/templates/applications/new_blogpost.html
@@ -6,7 +6,7 @@
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
 {{ helper.render_local_nav(current_user, 'blog', app.short_name) }}
-    <div class="container-padded">
+    <div class="container-padded hidden-container" style="display:none;">
         <div class="container container-padded">
         <div id="app-form" class="row"> 
             <div class="col-sm-9 col-sm-offset-3">
