--- a/templates/account/projects.html
+++ b/templates/account/projects.html
@@ -6,7 +6,7 @@
 {% block content %}
     {{ render_local_nav(current_user, "projects") }}
     <div class="container-padded">
-        <div class="container container-padded">
+        <div class="container container-padded hidden-container" style="display:none;">
             <div class="row">
                 <div class="col-sm-9 col-sm-offset-3">
                     {% include "_flash_messages.html" %}
