--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -5,7 +5,7 @@
 {% block content %}
     <span class="set-main-bg" data-bg="pattern-white-wall"></span>
     {{ render_local_nav(current_user, "admin") }}
-    <div class="container-padded">
+    <div class="container-padded hidden-container" style="display:none;">
         <div class="container container-padded">
             <div class="row">
                 <div class="col-sm-9 col-sm-offset-3">
