--- a/templates/admin/oclc_search.html
+++ b/templates/admin/oclc_search.html
@@ -3,7 +3,7 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 {% block content %}
 {{ render_local_nav(current_user, "catalogue") }}
-<div class="container-padded">
+<div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3 text-center-xs">
