--- a/templates/applications/auditlog.html
+++ b/templates/applications/auditlog.html
@@ -7,7 +7,7 @@
 
     {% if app %}
         {{ render_local_nav(current_user, 'auditlog', app.short_name) }}
-            <div class="container-padded">
+            <div class="container-padded hidden-container" style="display:none;">
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
