--- a/templates/applications/export.html
+++ b/templates/applications/export.html
@@ -7,7 +7,7 @@
 {% block content %}
     <span class="set-main-bg" data-bg="pattern-white-wall"></span>
         {{ render_local_nav(current_user, 'export', app.short_name) }}
-            <div class="container-padded">
+            <div class="container-padded hidden-container" style="display:none;">
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
