--- a/templates/applications/importers/dropbox.html
+++ b/templates/applications/importers/dropbox.html
@@ -9,7 +9,7 @@
 {{ helper.render_loading(loading_text) }}
 <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="{{ config.get('DROPBOX_APP_KEY') }}"></script>
         {{ render_local_nav(current_user, "tasks", app.short_name) }}
-            <div class="container-padded">
+            <div class="container-padded hidden-container" style="display:none;">
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
