--- a/templates/applications/new.html
+++ b/templates/applications/new.html
@@ -7,7 +7,7 @@
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
         {{ render_local_nav(current_user, "newapp") }}
-<div class="container-padded">
+<div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
         {% if current_user.admin %}
         <div id="app-form" class="row">
