--- a/templates/applications/settings.html
+++ b/templates/applications/settings.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     {{ render_local_nav(current_user, "appsettings", app.short_name) }}
-<div class="container-padded">
+<div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
         <div class="row">
             {% if app %}
