--- a/templates/applications/stats.html
+++ b/templates/applications/stats.html
@@ -17,7 +17,7 @@
 <link href="{{url_for('static', filename='css/stats/MarkerCluster.Default.css')}}" rel="stylesheet" type="text/css">
 <script src="{{url_for('static', filename='js/stats/leaflet.markercluster.js')}}" type="text/javascript"></script>
     {{ render_local_nav(current_user, "statistics", app.short_name) }}
-    <div class="container-padded  remove-padding-bottom">
+    <div class="container-padded  remove-padding-bottom hidden-container" style="display:none;">
        <div class="container container-padded">
            <div class="row">
                <div class="col-sm-9 col-sm-offset-3">
