--- a/templates/applications/task_autoimport_options.html
+++ b/templates/applications/task_autoimport_options.html
@@ -6,7 +6,7 @@
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
 {{ render_local_nav(current_user, "import", app.short_name) }}
-<div class="container-padded">
+<div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
