--- a/templates/applications/tasks.html
+++ b/templates/applications/tasks.html
@@ -7,7 +7,7 @@
 {% if app %}
 {{ render_local_nav(current_user, "tasks", app.short_name) }}
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
-<div class="container-padded">
+<div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
