--- a/templates/applications/_helpers.html
+++ b/templates/applications/_helpers.html
@@ -204,7 +204,7 @@ function imgError(image) {
 {% macro render_overall_progress(app, n_tasks, overall_progress, show_contribute_btn=True, show_n_tasks=False) %}
     <div class="row vcenter-md hcenter">
         <div class="col-md-8 col-xs-12 vcenter-sm text-center-xs">
-            <div class="col-sm-2"><input type="text" value="{{overall_progress | round |int}}" class="dial"></div>
+            <div class="col-sm-2 vcenter hcenter"><input type="text" value="{{overall_progress | round |int}}" class="dial"></div>
             <h3><strong> {{_('Overall progress')}}</strong>: {{ overall_progress | round | int }}% {{_('completed')}}</h3>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
