--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -58,7 +58,7 @@ hr.extra-margins{margin-top:40px;margin-bottom:40px}
 .container-main{padding-top:100px;padding-bottom:50px}
 .navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse{max-height: 400px;}
 .navbar{font-family:sans-serif;font-weight:400}
-.navbar-fixed-top{padding-top:30px;padding-bottom:25px;background-color:rgba(255,255,255,0);border:none;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;font-size:14px;-webkit-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;-moz-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;-ms-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;-o-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0;z-index:9999}
+.navbar-fixed-top{padding-top:30px;padding-bottom:25px;background-color:rgba(255,255,255,0);border:none;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;font-size:14px;-webkit-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0s;-moz-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0s;-ms-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0s;-o-transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0s;transition:background-color 200ms 0s,padding-top 1s 0s,padding-bottom 1s 0s;z-index:9999}
 .navbar-fixed-top.opaque{padding-top:10px;padding-bottom:10px;background-color:rgba(255,255,255,1);border-bottom:2px solid #eee}
 .navbar-brand{padding:0 15px;margin:0}
 .navbar-nav>li{margin:0 20px}
