--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@
     <!-- Le javascript -->
     <script type="text/javascript" src="{{url_for('static', filename='vendor/jquery-2.1.3.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='vendor/jquery.cookie.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/jquery.xdomainrequest.min.js')}}"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
     <script src="{{url_for('static', filename='js/history/scripts/bundled/html4+html5/jquery.history.js')}}" type="text/javascript"></script>
     <script type="text/javascript" src="{{url_for('static', filename='vendor/bootstrap-3.3.2/js/bootstrap.js')}}"></script>
