--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -137,7 +137,7 @@ ul.users li{display:inline-block;margin:25px 0 0px 3px;float:none;}
 ul.users li a{display:block;margin-bottom:5px;margin-right:10px;margin-left:10px}
 #cookies_warning{position:fixed;color:#ddd;min-height:30px;position:fixed;left:0;bottom:0;width:100%;z-index:99999;padding:6px 20px 4px;background-color:rgba(70,70,70,0.9);text-align:left}
 #cookies_warning > p{margin-top:8px}
-.bs-docs-sidenav{z-index:99;padding:0;width:220px;background-color:rgba(0,0,0,0.7)}
+.bs-docs-sidenav{z-index:99;padding:0;width:220px;background-color:rgba(0,0,0,0.7);position:fixed;}
 .bs-docs-sidenav.affix li:first-child{padding-top:40px}
 .bs-docs-sidenav.affix .nav-stacked li:first-child{padding-top:10px}
 .bs-docs-sidenav li.nav-link{margin-bottom:5px}
