--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -16,6 +16,7 @@
               <li class="nav-link {% if active_page == 'applications' %} active{% endif %}"><a href="{{ url_for('app.index') }}">{{ _('Projects') }}</a></li>
               <li class="nav-link {% if active_page == 'about' %} active{% endif %}"><a href="{{ url_for('home.about')}}">{{ _('About') }}</a></li>
               <li class="nav-link {% if active_page == 'globalstats' %} active{% endif %}"><a href="{{ url_for('stats.index')}}">{{ _('Statistics') }}</a></li>
+              <li class="nav-link {% if active_page == 'data' %} active{% endif %}"><a href="{{ url_for('data.index')}}">{{ _('Data') }}</a></li>
          </ul>
             {% include '_gcs_form.html' ignore missing %}
           {% if current_user.is_authenticated() %}
